# goit-python-web-hw-07

./: alembic.ini  main.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/versions/: aa5e61a0bd2f_initial_migration.py
